# userver-geo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: GeoIp.cmake
geo/: CMakeLists.txt
geo/include/slugkit/geo/: context_config.hpp  lookup_component_base.hpp  maxmind_db_lookup.hpp  middleware.hpp
geo/include/slugkit/geo/endpoints/: client_geo.hpp  reload_maxmind_db.hpp
geo/include/slugkit/geo/lookup/: lookup_component_base.hpp  maxmind_db_lookup.hpp  result.hpp
geo/src/slugkit/geo/: context_config.cpp  maxmind_db_lookup.cpp  middleware.cpp
geo/src/slugkit/geo/endpoints/: client_geo.cpp  reload_maxmind_db.cpp
geo/src/slugkit/geo/lookup/: maxmind_db_lookup.cpp
scripts/: set_environment.in.sh  update_databases.sh
